--- a/mongodb-frontend/package.json
+++ b/mongodb-frontend/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@yudiel/react-qr-scanner": "^1.2.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "formik": "^2.4.2",
@@ -15,7 +16,6 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-to-print": "^2.14.12",
