--- a/mongodb-frontend/.env
+++ b/mongodb-frontend/.env
@@ -1,3 +1,3 @@
 # React Environment Variables
-REACT_APP_API_URL=http://localhost:5000
+REACT_APP_API_URL=http://192.168.1.5:5000
 REACT_APP_ENV=development
